new Integer(bla) ==> Integer.valueOf(bla);